# fastf1-cuda-ghost-car-project

./: .gitignore  CMakeLists.txt  Dockerfile.cuda  README.md
data/: sample_cmp.csv  sample_ref.csv
data/monaco_2025_r_all/: ALB_lap_1.csv  ALB_lap_10.csv  ALB_lap_11.csv  ALB_lap_12.csv  ALB_lap_13.csv  ALB_lap_14.csv  ALB_lap_15.csv  ALB_lap_16.csv  ALB_lap_17.csv  ALB_lap_18.csv  ALB_lap_19.csv  ALB_lap_2.csv  ALB_lap_20.csv  ALB_lap_21.csv  ALB_lap_22.csv  ALB_lap_23.csv  ALB_lap_24.csv  ALB_lap_25.csv  ALB_lap_26.csv  ALB_lap_27.csv  ALB_lap_28.csv  ALB_lap_29.csv  ALB_lap_3.csv  ALB_lap_30.csv  ALB_lap_31.csv  ALB_lap_32.csv  ALB_lap_33.csv  ALB_lap_34.csv  ALB_lap_35.csv  ALB_lap_36.csv  ALB_lap_37.csv  ALB_lap_38.csv  ALB_lap_39.csv  ALB_lap_4.csv  ALB_lap_40.csv  ALB_lap_41.csv  ALB_lap_42.csv  ALB_lap_43.csv  ALB_lap_44.csv  ALB_lap_45.csv  (+1386 more)
docs/: fastf1_cuda_ghost_car_presentation.pptx  fastf1_cuda_ghost_car_project_report.docx
report_slides/: fastf1_cuda_ghost_car_presentation.pptx  fastf1_cuda_ghost_car_project_report.docx  ~$fastf1_cuda_ghost_car_presentation.pptx
scripts/: build_project_docs.ps1  export_fastf1_laps.py  run_cuda_container.sh  run_fastf1_windows.ps1
src/: lap_processing.cu  lap_processing.cuh  main.cpp  renderer.cpp  renderer.h  telemetry_loader.cpp  telemetry_loader.h  ui.cpp  ui.h
tests/: test_distance.cpp  test_interpolation.cpp
